#33 Criado endpoint para utilizar IA usando Ollama ou Gemini (#41)
- Criado estrutura para enviar arquivo para ser processado pelo Ollama
- Adicionado suporte a Gemini como provider na API
- Corrigido Issues do Codacy
